fixed flexbox spacing for nav links

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,23 +20,31 @@
   background-color: rgb(110, 208, 202);
   color: rgb(66, 66, 68);
   padding-left: 20px;
+  padding-bottom: 10px;
+  border-bottom-style: solid;
+  border-color: rgb(110, 208, 202);
 }
 /* Makes links spaced out, in a row opposed to stack, and seperates content */
 .nav-links {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: nowrap;
+  justify-content: end;
+  white-space: nowrap;
 }
 
 /* Thickend font and matches folor */
 .nav-links a {
   color: rgb(110, 208, 202);
+  font-size: x-large;
   font-weight: 800;
+  border-bottom: 5%;
+  border-bottom-style: solid;
+  border-color: rgb(110, 208, 202);
+  text-decoration: none;
 }
 /* Adds padding between items */
 .nav-item {
-  padding: 0% 2%;
+  padding: 0% 3%;
 }
 .banner {
   position: relative;
@@ -46,7 +54,7 @@
   position: absolute;
   top: 70%;
   left: 80%;
-  font-size: 20px;
+  font-size: x-large;
   text-align: end;
   justify-content: end;
   color: rgb(110, 208, 202);
